--- a/styles/menu.css
+++ b/styles/menu.css
@@ -9,101 +9,105 @@ $sixth-color: #ffffff;
 #f1aad9
 */
 /* ---------- Encabezado - Menú---------- */
-*{
-    padding: 0px;
-    margin: 0px;
-    font-family: 'Nunito', sans-serif;
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: "Nunito", sans-serif;
 }
-.colors{
-    background-color: #000000;
+.colors {
+  background-color: #000000;
 }
-.logoimg{
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.logoimg {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-header #barra{
-    -webkit-transform: all ease .5e;
-    -o-transform: all ease .5e;
-    transition: all ease .5e;
+header #barra {
+  -webkit-transform: all ease 0.5e;
+  -o-transform: all ease 0.5e;
+  transition: all ease 0.5e;
 }
-#barra ul{
-    list-style: none;
-    overflow: hidden;
-    
-    padding: 10px;
+#barra ul {
+  list-style: none;
+  overflow: hidden;
+
+  padding: 10px;
 }
 
-#barra ul li{
-    float: left;
+#barra ul li {
+  float: left;
 }
 
-#barra ul li a{
-    text-decoration: none;
-    font-size: 25px;
-    padding: 10px;
-    margin: 10px;
-    color: #ffff;
-    font-weight: 600;
+#barra ul li a {
+  text-decoration: none;
+  font-size: 25px;
+  padding: 10px;
+  margin: 10px;
+  color: #ffff;
+  font-weight: 600;
 }
 
-#barra ul li a:hover{
-    color: #F20A95;
+#barra ul li a:hover {
+  color: #f20a95;
 }
 
-.menu-fixed{
-    position: fixed;
-    z-index: 1000;
-    top: 0;
-    width: 100%;
-    box-shadow: 0px 4px 3px #F20A95;
+.menu-fixed {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  width: 100%;
+  box-shadow: 0px 4px 3px #f20a95;
 }
 
 /* ---------- Pie de pagina - Footer---------- */
-#footer{
-    background-color:  #438d7e;
-    padding: 0px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+#footer {
+  background-color: #438d7e;
+  padding: 0px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
-.contenedor{
-    padding: 20px;
-    width: 25%;
+.contenedor {
+  padding: 20px;
+  width: 25%;
 }
 
-.contenedor p:first-child{
-    padding: 5px 0px 5px 0px;
-    font-size: 20px;
-    background-color: #45ffc7;
-    text-align: center;
-    transform: rotate(-5deg);
+.contenedor p:first-child {
+  padding: 5px 0px 5px 0px;
+  font-size: 20px;
+  background-color: #45ffc7;
+  text-align: center;
+  transform: rotate(-5deg);
 }
 
-.contenedor a{
-    font-size: 35px;
-    color: #ffff;
-    margin: 0px 10px;
-
+.contenedor a {
+  font-size: 35px;
+  color: #ffff;
+  margin: 0px 10px;
 }
 
-.contenedor > a i:hover{
-    color:  #e62f2d;
+.contenedor > a i:hover {
+  color: #e62f2d;
 }
 
 .contenedor > p:last-of-type {
-    font-size: 16px;
-    color: #ffff;
-    text-align: center;
+  font-size: 16px;
+  color: #ffff;
+  text-align: center;
 }
 
-.imail, span{
-    font-size: 16px;
-    margin: 0px 5px;
-    text-align: center;
-    color: #ffff;
-
+.imail,
+span {
+  font-size: 16px;
+  margin: 0px 5px;
+  text-align: center;
+  color: #ffff;
+}
+#hijo img {
+  width: 70px;
+  margin: auto;
+  border: 1px solid;
 }
